Refactor current deals route logic
